GFETCH-193 ordercart icon fixed on mobile view

--- a/app/cart/cart-sidebar/cart-sidebar.component.css
+++ b/app/cart/cart-sidebar/cart-sidebar.component.css
@@ -26,11 +26,10 @@
     min-width: 400px;
 }
 
-.checkout-buttons{
 
-}
 .cart-icon {
     color: black;
+    margin: 0px;
 }
 .remove-icon {
     color: #cbc8c8;
@@ -75,14 +74,17 @@
     background: #d4d0d0;
     border-radius: 15px 0px 0px 15px;
     position: fixed;
-    margin-left: -48px;
-    padding: 20px 0px;
+    margin-left: -38px;
+    padding: 26px 3px;
     -webkit-box-shadow: 0px 0px 10px 1px rgba(139,138,145,0.41);
     -moz-box-shadow: 0px 0px 10px 1px rgba(139,138,145,0.41);
     box-shadow: 0px 0px 10px 1px rgba(139,138,145,0.41);
 }
 .toggler:hover {
     background: #b4afaf;
+}
+.bottombar-cart {
+    display: none;
 }
 .has-item {
     color: black;
@@ -92,4 +94,29 @@
    #cart-sidebar {
        display: none;
    }
+   .sidebar-cart{
+       display: none;
+   }
+
+   .bottombar-cart {
+        display: block;
+        position: fixed;
+        background: #d4d0d0;
+        bottom: 0;
+        z-index: 4;
+        width: 100%;
+        height: 10%;
+    }
+    .quantity-background{
+        border-radius: 17px;
+        width: 30px;
+        background-color: white;
+        margin-top: -15px;
+        margin-left: -13px;
+        font-size: 1.5em;
+        position: absolute;
+    }
+    .bottombar-cart-content{
+        margin-top: 5%;
+    }
 }
