--- a/app/vendor-menu/vendor-menu.component.css
+++ b/app/vendor-menu/vendor-menu.component.css
@@ -52,7 +52,7 @@
     width: 50%;
 }
 
-@media only screen and (max-width: 780px){
+@media only screen and (max-width: 768px){
 
     .vendor-name-div h1 {
         position: relative;
